--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test:mobile": "node scripts/test-mobile-responsiveness.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
