--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,24 @@
   "extends": ["next/core-web-vitals"],
   "rules": {
     "prefer-const": "error",
-    "no-var": "error"
+    "no-var": "error",
+    "no-console": "warn",
+    "no-debugger": "error",
+    "no-unused-vars": "warn",
+    "no-undef": "error",
+    "prefer-arrow-callback": "warn",
+    "no-implied-eval": "error",
+    "no-new-func": "error",
+    "no-script-url": "error",
+    "react/react-in-jsx-scope": "off"
+  },
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
+  "globals": {
+    "React": "readonly",
+    "NodeJS": "readonly"
   }
 } 
